# unit-test

./: CMakeLists.txt  README.md
include/: calculator.hpp
src/: calculator.cpp
test/: test_by_independently.cpp  test_by_sameInit.cpp  test_by_sameLogic.cpp
